--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.3.0",
+    "firebase": "^9.22.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
