--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
     "bootstrap": "^5.3.0",
+    "chart.js": "^3.9.0",
     "firebase": "^9.22.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.10",
